# pokeuk-dealscout-

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fly.toml  package-lock.json  package.json  project_catch_em_all.md  railway.json  render.yaml
backend/: Dockerfile  __init__.py  alembic.ini  config.py  constants.py  database.py  main.py  pyproject.toml  redis_client.py  requirements.txt  scraper.py  website_scraper.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/models/: __init__.py  card.py  deal.py  pokemon_set.py
backend/routes/: __init__.py  cards.py  deals.py  health.py  sets.py
backend/schemas/: __init__.py  card.py  deal.py  pokemon_set.py
backend/scripts/: init_db.py
backend/services/: __init__.py  condition_matcher.py  deal_score.py  keyword_filter.py  market_value.py
backend/tests/: test_deal_score.py  test_keyword_filter.py
frontend/: next.config.js  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: DealCard.tsx  DealGrid.tsx  FilterBar.tsx  index.ts  (+2 more)
scrapers/: Dockerfile  __init__.py  base.py  cardmarket.py  chaos_cards.py  ebay_uk.py  magic_madhouse.py  playwright_base.py  pokemon_tcg_api.py  proxy_manager.py  pyproject.toml  requirements.txt  run_once.py  scheduler.py  sync_cards.py  vinted.py
scrapers/tests/: __init__.py  test_ebay_uk.py  test_playwright_scrapers.py  test_pokemon_tcg_api.py  test_retail_scrapers.py
scripts/: check_env.py
(+3 files in other folders)
